--- a/maps/ze_bluearchive_abydos_b1/default_ents.jsonc
+++ b/maps/ze_bluearchive_abydos_b1/default_ents.jsonc
@@ -2,6 +2,7 @@
 // map ze_bluearchive_abydos_b1
 // workshop id 3261481731
 // 中文>>日本語
+//翻訳機に頼らず自分で翻訳したので多少変な部分があったら書き直して下さい
 {
     "add":
     [ 
