--- a/maps/ze_bluearchive_abydos_b1/default_ents.jsonc
+++ b/maps/ze_bluearchive_abydos_b1/default_ents.jsonc
@@ -938,7 +938,7 @@
                 [					
 		    {
                         "outputname": "OnPass",
-			"targetname": "[PR#]severadmin",
+			"targetname": "severadmin",
                         "inputname": "Command",      
                         "overrideparam": "say <<-4コスト?>>",                
                         "delay": 0.0,
