--- a/maps/ze_bluearchive_abydos_b1/default_ents.jsonc
+++ b/maps/ze_bluearchive_abydos_b1/default_ents.jsonc
@@ -1,8 +1,8 @@
-// stripper by 兎RB 25.02.09
+// stripper by 兎RB 25.02.10
 // map ze_bluearchive_abydos_b1
 // workshop id 3261481731
 // 中文>>日本語
-//翻訳機に頼らず自分で翻訳したので多少変な部分があったら書き直して下さい
+// 翻訳機に頼らず自分で翻訳したので多少変な部分があったら書き直して下さい
 {
     "add":
     [ 
@@ -118,7 +118,7 @@
 
         {
             "classname": "point_worldtext",
-            "origin": "-10987 -713 10588",
+            "origin": "-10987 -711 10588",
             "angles": "0 90 90",
 	    "scales": "1 1 1",
 	    "depth_render_offset": "0.125",
@@ -130,7 +130,7 @@
             "color": "255 255 255",
             "fullbright": "1",
             "enabled": "1",
-            "message": "音楽/路線help：",
+            "message": "音楽/ルートhelp：",
 	    "fademindist": "-1",
             "rendercolor": "255 255 255",
             "renderamt": "255",
@@ -258,7 +258,7 @@
             },
             "replace":
             {
-                "message": "等グルップ制作過程手伝い"
+                "message": "等マップ制作関連手伝い"
             }
         },
         
@@ -946,6 +946,70 @@
                     }
                 ]
             }
-        }       
+        },
+
+        {
+            "match":
+            {
+                "targetname": "[PR#]komakaze_granede_text_01"
+            },
+            "replace":
+            {
+                "message": "燃焼"
+            }
+        },
+        
+        {
+            "match":
+            {
+                "targetname": "[PR#]komakaze_granede_branch_02"
+            },
+            "delete":
+            {
+                "io":
+                [					
+		    {
+                        "outputname": "OnCase01",
+			"targetname": "[PR#]komakaze_granede_text_01",
+                        "inputname": "SetMessage",      
+                        "overrideparam": "燃烧",                
+                        "delay": 0.0,
+                        "timestofire": -1
+                    },
+
+                    {
+                        "outputname": "OnCase03",
+			"targetname": "[PR#]komakaze_granede_text_01",
+                        "inputname": "SetMessage",      
+                        "overrideparam": "烟雾",                
+                        "delay": 0.0,
+                        "timestofire": -1
+                    }
+                ]
+            },
+            "insert":
+            {
+                "io":
+                [					
+		    {
+                        "outputname": "OnCase01",
+			"targetname": "komakaze_granede_text_01",
+                        "inputname": "SetMessage",      
+                        "overrideparam": "燃焼",                
+                        "delay": 0.0,
+                        "timestofire": -1
+                    },
+
+                    {
+                        "outputname": "OnCase03",
+			"targetname": "komakaze_granede_text_01",
+                        "inputname": "SetMessage",      
+                        "overrideparam": "煙",                
+                        "delay": 0.0,
+                        "timestofire": -1
+                    }
+                ]
+            }
+        }
     ]
 }
