--- a/maps/ze_minecraft_sakura/default_ents.jsonc
+++ b/maps/ze_minecraft_sakura/default_ents.jsonc
@@ -308,7 +308,7 @@
             },
             "replace":
             {
-                "message": "孤独な人いつも観察が上手.JPG"
+                "message": "孤独な人はいつも観察が上手.JPG"
             }
         },
 
