--- a/map/ze_purification_a1/default_ents.jsonc
+++ b/map/ze_purification_a1/default_ents.jsonc
@@ -1,4 +1,4 @@
-// stripper by 兎RB 25.03.27
+// stripper by 兎RB 25.03.29
 // map ze_purification_a1
 // workshop id 33128279930
 // if find mistranslation tell me
@@ -21,7 +21,7 @@
                         "inputname": "SetValue",      
                         "overrideparam": "1", // please type language serial number here               
                         "delay": 0.0,
-                        "timestofire": 1
+                        "timestofire": -1
                     },
 
                     {
@@ -29,16 +29,16 @@
                         "targetname": "language_counter",
                         "inputname": "GetValue",                    
                         "delay": 0.1,
-                        "timestofire": 1
+                        "timestofire": -1
                     },
                     // stripper update log
                     {
                         "outputname": "OnMapSpawn",
                         "targetname": "severadmin",
                         "inputname": "Command",
-                        "overrideparam": "say language translation stripper 25.03.27",                    
+                        "overrideparam": "say language translation stripper 25.03.29",                    
                         "delay": 1.0,
-                        "timestofire": 1
+                        "timestofire": -1
                     }
                 ]
             }
@@ -72,6 +72,15 @@
             "io":
             [
                 // 日本語
+		{
+		    "outputname": "OnCase01",
+		    "targetname": "worldtext1",
+		    "inputname": "SetMessage",
+		    "overrideparam": "ご支援ありがとうございます：Bella•Lientece",
+		    "delay": 0.0,
+		    "timestofire": -1
+		},
+
                 {
 		    "outputname": "OnCase01",
 		    "targetname": "3734",
@@ -193,7 +202,7 @@
 		    "outputname": "OnCase01",
 		    "targetname": "4051",
 		    "inputname": "AddOutPut",
-		    "overrideparam": "OnStartTouch>command>Command>say ＊＊ 防御！　私たちは早くやった ＊＊>0.0>1",
+		    "overrideparam": "OnStartTouch>command>Command>say ＊＊ 防御！　私たちが早くやった ＊＊>0.0>1",
 		    "delay": 0.0,
 		    "timestofire": -1
                 },
@@ -373,7 +382,7 @@
 		    "outputname": "OnCase01",
 		    "targetname": "boss_start_relay",
 		    "inputname": "AddOutPut",
-		    "overrideparam": "OnTrigger>command>Command>say ＊＊ バルトリ：???＊＊>5.0>1",
+		    "overrideparam": "OnTrigger>command>Command>say ＊＊ バルトリ：??? ＊＊>5.0>1",
 		    "delay": 0.0,
 		    "timestofire": -1
                 },
@@ -499,7 +508,7 @@
 		    "outputname": "OnCase01",
 		    "targetname": "boss_final_move",
 		    "inputname": "AddOutPut",
-		    "overrideparam": "OnOnFullyOpen>command>Command>say ＊＊ ステージクリア　おめでとうございます！ ＊＊>3.0>1",
+		    "overrideparam": "OnFullyOpen>command>Command>say ＊＊ ステージクリア　おめでとうございます！ ＊＊>3.0>1",
 		    "delay": 0.0,
 		    "timestofire": -1
                 },
@@ -508,7 +517,7 @@
 		    "outputname": "OnCase01",
 		    "targetname": "boss_final_move",
 		    "inputname": "AddOutPut",
-		    "overrideparam": "OnOnFullyOpen>command>Command>say ＊＊ 貴方のプレイに感謝します！ ＊＊>10.0>1",
+		    "overrideparam": "OnFullyOpen>command>Command>say ＊＊ 貴方のプレイに感謝します！ ＊＊>10.0>1",
 		    "delay": 0.0,
 		    "timestofire": -1
                 },
@@ -521,7 +530,52 @@
 		    "delay": 0.0,
 		    "timestofire": -1
                 },
+
+                {
+		    "outputname": "OnCase01",
+		    "targetname": "weapon_winda",
+		    "inputname": "AddOutPut",
+		    "overrideparam": "OnPlayerPickup>command>Command>say ＊＊ 風アイテム獲得 クール:60秒 持続：3秒 ＊＊>0.0>1",
+		    "delay": 1.1,
+		    "timestofire": -1
+		},
+
+		{
+		    "outputname": "OnCase01",
+		    "targetname": "weapon_walla",
+		    "inputname": "AddOutPut",
+		    "overrideparam": "OnPlayerPickup>command>Command>say ＊＊ 壁アイテム獲得 クール:60秒 持続：5秒 ＊＊>0.0>1",
+		    "delay": 1.1,
+		    "timestofire": -1
+		},
                 // 한국어
+		{
+		    "outputname": "OnCase02",
+		    "targetname": "worldtext1",
+		    "inputname": "SetMessage",
+		    "overrideparam": "지원 감사드립니다：Bella•Lientece",
+		    "delay": 0.0,
+		    "timestofire": -1
+		},
+
+		{
+		    "outputname": "OnCase02",
+		    "targetname": "worldtext1",
+		    "inputname": "KeyValue",
+		    "overrideparam": "origin 9302 5881 -8114",
+		    "delay": 0.0,
+		    "timestofire": -1
+		},
+		
+		{
+		    "outputname": "OnCase02",
+		    "targetname": "3730",
+		    "inputname": "SetMessage",
+		    "overrideparam": "건축참고：Abrahamic Family House",
+		    "delay": 0.0,
+		    "timestofire": -1
+		},
+
                 {
 		    "outputname": "OnCase02",
 		    "targetname": "3734",
@@ -643,7 +697,7 @@
 		    "outputname": "OnCase02",
 		    "targetname": "4051",
 		    "inputname": "AddOutPut",
-		    "overrideparam": "OnStartTouch>command>Command>say ＊＊ 방어！우리들은 빠르게 해냈어 ＊＊>0.0>1",
+		    "overrideparam": "OnStartTouch>command>Command>say ＊＊ 방어！우리들이 빠르게 해냈어 ＊＊>0.0>1",
 		    "delay": 0.0,
 		    "timestofire": -1
                 },
@@ -823,7 +877,7 @@
 		    "outputname": "OnCase02",
 		    "targetname": "boss_start_relay",
 		    "inputname": "AddOutPut",
-		    "overrideparam": "OnTrigger>command>Command>say ＊＊ 바르톨리：???＊＊>5.0>1",
+		    "overrideparam": "OnTrigger>command>Command>say ＊＊ 바르톨리：??? ＊＊>5.0>1",
 		    "delay": 0.0,
 		    "timestofire": -1
                 },
@@ -949,7 +1003,7 @@
 		    "outputname": "OnCase02",
 		    "targetname": "boss_final_move",
 		    "inputname": "AddOutPut",
-		    "overrideparam": "OnOnFullyOpen>command>Command>say ＊＊ 스테이지 클리어 축하 드립니다！ ＊＊>3.0>1",
+		    "overrideparam": "OnFullyOpen>command>Command>say ＊＊ 스테이지 클리어 축하 드립니다！ ＊＊>3.0>1",
 		    "delay": 0.0,
 		    "timestofire": -1
                 },
@@ -958,7 +1012,7 @@
 		    "outputname": "OnCase02",
 		    "targetname": "boss_final_move",
 		    "inputname": "AddOutPut",
-		    "overrideparam": "OnOnFullyOpen>command>Command>say ＊＊ 당신의 플레이에 감사 드립니다！ ＊＊>10.0>1",
+		    "overrideparam": "OnFullyOpen>command>Command>say ＊＊ 당신의 플레이에 감사 드립니다！ ＊＊>10.0>1",
 		    "delay": 0.0,
 		    "timestofire": -1
                 },
@@ -970,8 +1024,73 @@
                     "overrideparam": "OnTrigger>command>Command>say ＊＊ 바르톨리：그대여 끝났다고 생각하셨나요？ ＊＊>2.0>1",
                     "delay": 0.0,
                     "timestofire": -1
-                }
+                },
+                
+                {
+		    "outputname": "OnCase02",
+		    "targetname": "weapon_winda",
+		    "inputname": "AddOutPut",
+		    "overrideparam": "OnPlayerPickup>command>Command>say ＊＊ 바람 아이템 획득 쿨타임:60초 지속：3초 ＊＊>0.0>1",
+		    "delay": 1.1,
+		    "timestofire": -1
+		},
+
+		{
+		    "outputname": "OnCase02",
+		    "targetname": "weapon_walla",
+		    "inputname": "AddOutPut",
+		    "overrideparam": "OnPlayerPickup>command>Command>say ＊＊ 벽 아이템 획득 쿨타임:60초 지속：5초 ＊＊>0.0>1",
+		    "delay": 1.1,
+		    "timestofire": -1
+		}
             ]
+        },
+
+        {
+            "targetname": "worldtext1",
+            "classname": "point_worldtext",
+	    "origin": "9243 5881 -8114",
+            "angles": "0 0 90",
+	    "scales": "1 1 1",
+	    "depth_render_offset": "0.125",
+            "reorient_mode": "0",
+            "justify_vertical": "0",
+            "justify_horizontal": "1",
+            "font_name": "Arial Black",
+            "font_size": "125",
+            "world_units_per_pixel": "0.25",
+            "color": "86 86 86",
+            "fullbright": "0",
+            "enabled": "1",
+            "message": "language",
+	    "fademindist": "-1",
+            "rendercolor": "255 255 255",
+            "renderamt": "255",
+            "rendermode": "kRenderNormal",
+            "renderfx": "kRenderFxNone"
+        },
+
+	{
+            "classname": "point_worldtext",
+	    "origin": "9381 5881 -8030",
+            "angles": "0 0 90",
+	    "scales": "1 1 1",
+	    "depth_render_offset": "0.125",
+            "reorient_mode": "0",
+            "justify_vertical": "0",
+            "justify_horizontal": "1",
+            "font_name": "Arial Black",
+            "font_size": "125",
+            "world_units_per_pixel": "0.25",
+            "color": "86 86 86",
+            "fullbright": "0",
+            "enabled": "1",
+            "message": "by Adjaye Associates",
+	    "fademindist": "-1",
+            "rendercolor": "255 255 255",
+            "renderamt": "255",
+            "rendermode": "kRenderNormal",
+            "renderfx": "kRenderFxNone"
         }
     ],
     "modify": // remove message output, add targetname
