日本語>한국어

--- a/map/ze_surf_okitsu_shonyudo/default_ents.jsonc
+++ b/map/ze_surf_okitsu_shonyudo/default_ents.jsonc
@@ -17,7 +17,7 @@
                     // stripper update log
                     {
                         "outputname": "OnMapSpawn",
-						"targetname": "severadmin",
+						"targetname": "[CONSOLE]",
                         "inputname": "Command",
                         "overrideparam": "say language translation stripper 25.10.05",
                         "delay": 1.0,
@@ -1731,4 +1731,5 @@
             }
         }
     ]
+
 }
